--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "reactstrap": "^8.4.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "tiny-slider": "^2.9.2"
   },
   "scripts": {
