--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "alertifyjs": "^1.13.1",
     "bootstrap": "^4.4.1",
     "node-sass": "^4.14.1",
+    "query-string": "^6.12.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
