--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "query-string": "^6.12.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.1",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.0.1",
     "react-redux": "^7.2.0",
