--- a/package.json
+++ b/package.json
@@ -3,31 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-regular-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.9",
+    "@fortawesome/fontawesome-svg-core": "^1.2.31",
+    "@fortawesome/free-brands-svg-icons": "^5.15.0",
+    "@fortawesome/free-regular-svg-icons": "^5.15.0",
+    "@fortawesome/free-solid-svg-icons": "^5.15.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "alertifyjs": "^1.13.1",
     "axios": "^0.19.2",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
-    "query-string": "^6.12.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.1",
+    "query-string": "^6.13.4",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-credit-cards": "^0.8.3",
-    "react-dom": "^16.12.0",
-    "react-dropzone": "^11.0.1",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "reactstrap": "^8.4.0",
+    "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.0",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
+    "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "tiny-slider": "^2.9.2"
+    "tiny-slider": "^2.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,5 +49,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000/"
 }
