--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://myilmazz99.github.io/shopui",
+  "homepage": "http://myilmazz99.github.io/NotebookpowerUI",
   "name": "intro",
   "version": "0.1.0",
   "private": true,
