--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@tinymce/tinymce-react": "^3.9.0",
     "alertifyjs": "^1.13.1",
     "axios": "^0.19.2",
     "jwt-decode": "^2.2.0",
@@ -28,8 +29,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "reactstrap": "^8.6.0",
-    "redux-thunk": "^2.3.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "tiny-slider": "^2.9.3"
   },
   "scripts": {
